<resources>
    <string name="app_name">Carwash</string>
    <string-array name="hours">
        <item>9:30 - 10:30</item>
        <item>11:00 - 11:30</item>
        <item>12:00 - 13:30</item>
        <item>14:00 - 15:30</item>
        <item>16:00 - 17:30</item>
    </string-array>
    <string name="ingresar">Ingresar</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="no_tiene_cuenta">No tiene cuenta?</string>
    <string name="olvidaste_tu_contrase_a">Olvidaste tu contraseña?</string>
    <string name="registrese">Registrese</string>
    <string name="todo">TODO</string>
    <string name="title_activity_servicios">Servicios</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>