<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actIngresar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAF0F1"
    android:backgroundTint="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ingresar"
        android:textColor="#090909"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="295dp"
        android:layout_height="44dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#22313C"
        android:ems="10"
        android:hint="@string/correo_electr_nico"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:textColor="#100F0F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textIngresar"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtContraseña"
        android:layout_width="295dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#22313C"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="304dp"
        android:layout_height="66dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/ingresar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOlvidasteContraseña" />

    <TextView
        android:id="@+id/textNoTieneCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:text="@string/no_tiene_cuenta"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar"
        app:layout_constraintVertical_bias="0.528" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="319dp"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2"
        tools:srcCompat="@drawable/logo2"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtOlvidasteContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/olvidaste_tu_contrase_a"
        android:textColor="#2979FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#0B0A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/edtContraseña"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:srcCompat="@android:drawable/ic_menu_view"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtRegistrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrese"
        android:textColor="#2979FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toEndOf="@+id/textNoTieneCuenta"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar"
        app:layout_constraintVertical_bias="0.524" />

    <Button
        android:id="@+id/btn_Test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pruebame"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="433dp" />

</android.support.constraint.ConstraintLayout>